OK 111 but not XPS

--- a/Sections/2_Theory_Models/Catalysis.tex
+++ b/Sections/2_Theory_Models/Catalysis.tex
@@ -80,6 +80,7 @@ The orientation and structure of each facet on the nanoparticle surface can be d
 Between facets are the nanoparticle edges and corners, notorious for being very favorable adsorption sites due to a low local coordination geometry \parencite{Jiang2009}.
 \cite{CalleVallejo2014}, \cite*{CalleVallejo2018} have used density dunctional theory (DFT) to show an approximate linear trend between the generalised coordination number $\bar{CN(i)}$ of a nanoparticle surface atom $i$ with $n_i$ neighbours (eq. \ref{eq:CN}) and its adsorption properties.
 The \textit{Taylor ratio} translates this effect by defining the fraction between active sites and the total exposed surface \parencite{Taylor1925}.
+\textcolor{Important}{CalleVallejo2023?}
 
 \begin{equation}
     \bar{CN(i)} = \sum_{j=1}^{n_i} \frac{cn(j) n_j}{cn_{max}}
