--- a/Sections/2_Theory_Models/ComputerPrograms.tex
+++ b/Sections/2_Theory_Models/ComputerPrograms.tex
@@ -378,3 +378,5 @@ The primary challenge associated with surface x-ray diffraction lies in the comp
 On one hand, a fine sampling of the reciprocal space will take hours which is hardly compatible with time-resolved experiments.
 On the other hand, skipping areas of the reciprocal space could result in missing critical information if the symmetry of the surface structure is not known prior to the experiment.
 For high symmetry structures, a small portion of the reciprocal space can sometimes be sufficient to have a final solution.
+
+\subsection{GenX} \label{sec:GenX}
