--- a/Sections/2_Theory_Models/SixS.tex
+++ b/Sections/2_Theory_Models/SixS.tex
@@ -138,7 +138,7 @@ A 3D view in the horizontal configuration with the high pressure surface diffrac
 This reactor is used for the study of heterogeneous catalysis \parencite{VanRijn2010, Resta2020a}, and couples a UHV environment for classical surface science preparations (sputtering, annealing, evaporations) with an ambient pressure reactor.
 %Sputtering is a process in which atoms or ions from a solid target material are ejected or "sputtered" from the surface of the target due to the impact of high-energy particles.
 In the frame of this thesis, the metallic single crystal are purchased already cut and polished for SXRD experiments, introduced in the reactor and cleaned by sputtering \parencite{Taglauer1990} before the experiment.
-It is also possible to heat the sample up to \qty{900}{\degreeCelsius} (at low pressures) for an extended period of time (sec \ref{sec:SXRD100} - \ref{sec:SXRD111}) to anneal the sample after sputtering \parencite{MUSKET1982143}.
+It is also possible to heat the sample up to \qty{900}{\degreeCelsius} for an extended period of time to anneal the sample after sputtering \parencite{MUSKET1982143}.
 
 \begin{figure}[!htb]
     \centering
