--- a/Sections/2_Theory_Models/X-ray_interaction_matter.tex
+++ b/Sections/2_Theory_Models/X-ray_interaction_matter.tex
@@ -269,7 +269,7 @@ The cross-section for XPS is directly proportional to the absorption cross-secti
     \sigma_a(\hbar\omega) = 2 r_0 \lambda f_2(\hbar\omega)
 \end{equation}
 
-\section{Scattering from crystals}
+\section{Scattering from crystals}\label{sec:ScatCrystal}
 
 A crystal is a solid material composed of a regular, repeating arrangement of atoms, ions, or molecules (\textit{i.e.} a pattern), exhibiting a highly ordered structure with long-range periodicity in three dimensions.
 
