--- a/Sections/3_Results_Nanoparticles/BCDIOxidationAmmonia.tex
+++ b/Sections/3_Results_Nanoparticles/BCDIOxidationAmmonia.tex
@@ -28,7 +28,7 @@ Therefore, this analysis using BCDI can only aim to reveal the structure variati
 \textcolor{Important}{Need to say that we did this in a experiment}
 proven to be able to bring a more
 
-Three scans were recorded under each condition (tab. \ref{tab:Conditions}) at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius} for each nanoparticle to probe for any evolution of the particles surface structure during a fixed atmosphere as a function of time, and to otherwise demonstrate the reproducibility of the measurements.
+Three scans were recorded under each condition (tab. \ref{tab:ConditionsNanoparticles}) at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius} for each nanoparticle to probe for any evolution of the particles surface structure during a fixed atmosphere as a function of time, and to otherwise demonstrate the reproducibility of the measurements.
 
 \begin{figure}[!htb]
     \centering
@@ -80,3 +80,6 @@ No surface
 \end{figure}
 
 \subsection{Strain field energy}
+
+
+\parencite{Ellinger2008, Nolte2008, Gustafson2014, Hejral2016, Abuin2019, Kawaguchi2019, Hejral2021, Kim2021, Chung2021}
