--- a/Sections/3_Results_Nanoparticles/Introduction.tex
+++ b/Sections/3_Results_Nanoparticles/Introduction.tex
@@ -95,7 +95,7 @@ The activation temperature for the production of \nitrogen can be more easily id
 However, the activation temperature for \nitrousoxide in the second temperature ramp is at about \qty{450}{\degreeCelsius}, a temperature that was reached during the first temperature ramp as well, but without the detection of \nitrousoxide.
 This could be linked to either an activation process of the catalyst during the first temperature ramp that lowers the activation temperature for the production of nitrous oxide in the second temperature ramp, or more probably to a very low signal to noise ratio that hides the evolution of the partial pressure due to the remaining air in the reactor, the partial pressure on \nitrousoxide being the lowest of all the detected gases.
 
-According to these primary results, the study of the oxidation of ammonia with BCDI was originally decided to be carried out at \qtylist{300;500;600}{\degreeCelsius}, temperatures before and after the catalyst light off (tab. \ref{tab:Conditions}).
+According to these primary results, the study of the oxidation of ammonia with BCDI was originally decided to be carried out at \qtylist{300;500;600}{\degreeCelsius}, temperatures before and after the catalyst light off (tab. \ref{tab:ConditionsNanoparticles}).
 
 \begin{table}[!htb]
     \centering
@@ -111,9 +111,10 @@ According to these primary results, the study of the oxidation of ammonia with B
     48 & 1 & 1 &  \\
     47 & 1 & 2 &  \\
     41 & 1 & 8 &  \\
+    50 & 0 & 0 & Returning to an inert atmosphere \\
     \bottomrule
     \end{tabular}%
     %}
     \caption{}
-    \label{tab:Conditions}
+    \label{tab:ConditionsNanoparticles}
 \end{table}
