--- a/Sections/4_Results_SingleCrystals/Conclusion.tex
+++ b/Sections/4_Results_SingleCrystals/Conclusion.tex
@@ -2,4 +2,21 @@
 
 \textcolor{red}{This chapter covers three areas: analysis of the data; discussion of the results of the analysis; and how your findings relate to the literature. The analysis of the data can be discussed here but the details of any analysis, such as statistical calculations, should be shown in the appendices. You should present any discussion clearly and logically and it should be relevant to your research questions/hypotheses or aims and objectives. Insert any tables or figures that you decide are important in a relevant part of the text not in the appendices, and discuss them fully. Make sure that you relate the findings of your primary research to your literature review. You can do this by comparison: discussing similarities and particularly differences. If you think your findings have confirmed some literature findings, say so and say why. If you think your findings are at variance with the literature, say so and say why.}
 
-PtO2 plays a role \cite{McCabe1986, HANNEVOLD2005}
+
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/B07_2022_04_XPS/Figures/product_partial_pressure_comparison_vs_time.pdf}
+    \caption{
+
+    }
+    \label{fig:RGAXPS}
+\end{figure}
+
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/product_partial_pressure_comparison_vs_time.pdf}
+    \caption{
+
+    }
+    \label{fig:RGASXRD}
+\end{figure}
