--- a/Sections/4_Results_SingleCrystals/Introduction.tex
+++ b/Sections/4_Results_SingleCrystals/Introduction.tex
@@ -1,154 +1,136 @@
-\textcolor{red}{This Chapter should demonstrate that you have conducted a thorough and critical investigation of relevant sources.
-Apart from a presentation of the sources of your data, this chapter allows you to critically discuss the data (whatever these data are, ‘quantitative’ or ‘qualitative’, primary or secondary), which is proof of good research. You can even do good research with poor data but you must demonstrate that you are aware of the data quality and accordingly are careful in your interpretations. Essentially, there are three aspects to consider:
-\begin{enumerate}
-\item   Reliability, which, for example, could depend on whether they are estimates or more direct evidence;
-\item   Representativity, which is about how typical the data are; for example, you may have arguments why the very few cases are typical or you may carry out statistical tests;
-\item Validity, which is about the relevance of the data for your case. Strictly speaking, sometimes no valid data are available but one may argue that there are other data which could be used as ‘proxies’.)
-\end{enumerate}
-}
-
 \section{Introduction}
 
+% introduce sxrd
 Past ammonia oxidation experiments on \ce{Pt_{25}Rh_{75}} (100) \parencite{Resta2020a} single-crystals gave significant new insights on the relaxation dynamics when the system crosses the catalyst activation barrier.
 The experiment focused on measuring before and after the catalyst light off temperature, it was found that the transition from a nitrogen-rich to oxygen-rich input mixture coincides with a relaxation change in the topmost metallic layer: moving from outward to inward, but only for temperatures above the light off.
-Thanks to NAP-XPS experiments, nitrogen rich species (such as \nitrogen) were associated to positive relaxation of the topmost layer, expansion; while oxidative species (such as NO and oxygen) were linked to negative relaxation, contraction.
-This change in relaxation has an impact on the band structure and therefore on the catalytic properties as proposed in the d-band model as detailed in sec. \ref{sec:Catalysis}.
-It is therefore our intent to study if this modification in the relaxation is present only in the \ce{PtRh} alloy or if it has a more general value also on the constituent elements of the alloy to fully understand the impact of the Pt surface orientation on the catalyst selectivity.
-Different relaxation state and transient structures are expected to exist as a function of the ammonia to oxygen ratio.
 
-Moreover, we have recently probed the relaxation of single multi-faceted nanoparticles at SixS under the oxidation of ammonia using surface x-ray diffraction, which showed a global reshaping of the nanoparticles at \qty{600}{\degreeCelsius} under reacting conditions, favouring \{111\} and \{100\} facets over \{110\} and \{113\} facets.
-The evolution of two single nanoparticles exhibiting different type of facets on their surface was probed with Bragg coherent diffraction imaging, highlighting the importance of the particle structure
-The 3D displacement and strain evolution of two different facets (\{100\} and \{111\}) will be compared to our results obtained on Pt 100 and 111 crystal surfaces.
+Thanks to near-ambient pressure x-ray photoelectron spectroscopy (NAP-XPS) experiments, nitrogen rich species (such as \nitrogen) were associated to positive relaxation of the topmost layer, expansion; while oxidative species (such as NO and oxygen) were linked to negative relaxation, contraction.
+This change in relaxation has an impact on the band structure and therefore on the catalytic properties as proposed in the d-band model detailed in sec. \ref{sec:Catalysis}.
+It is therefore our intent to study if this modification in the relaxation is present only in the \ce{PtRh} alloy or if it has a more general value also on the constituent elements of the alloy such as Pt.
+Different relaxation state, transient structures, and surface moieties are expected to exist as a function of the ammonia to oxygen ratio.
 
-We first intend to measure the total signal scattered from \ce{Al_2O_3}-supported platinum particles by taking advantage of the possibility to carry out grazing-incidence diffraction measurements at the SixS beamline of synchrotron SOLEIL.
-By having a low incidence angle, the incident beam recovers the whole sample surface, the scattered beam being then proportionnal to the ensemble behaviour of the nanoparticles \parencite{Nolte2008, Hejral2013}.
+Moreover, we have recently probed the average shape of multi-faceted nanoparticles at SixS under the oxidation of ammonia using surface x-ray diffraction, which showed a global reshaping of the nanoparticles at \qty{600}{\degreeCelsius} under reacting conditions, favouring \{111\} and \{100\} facets over \{110\} and \{113\} facets, which could be the signature of an important role of surface oxides, stable on the \{111\} and \{100\} facets, to the catalytic activity, as predicted by Seriani \textit{et al.} \parencite*{Seriani2008}.
+The evolution of two single nanoparticles exhibiting different type of facets on their surface was probed with Bragg coherent diffraction imaging, highlighting the importance of the particle shape and thus facet coverage on its behaviour during the ammonia oxidation cycle.
 
-The goal of this experiment is two-fold.
-First, the nanoparticles epitaxy must be ensured to be stable at different temperatures and atmospheres, before measuring a single nanoparticle with Bragg coherent diffraction imaging, where the beam is reduced to micrometric size.
-Secondly, the average nanoparticle shape and structure will be probed by studying the intensity of crystal truncation rods (CTR) in directions perpendicular to the expected facets on the nanoparticle surface.
-Prior experiments with similar samples \parencite{Dupraz2017, Li2020, Lim2021, Dupraz2022} have shown that the particles exhibit a Winterbottom shape \parencite{WINTERBOTTOM1967, Boukouvala2021}, typical of nanoparticles epitaxied on a substrate, with mainly \{111\}, \{110\}, and \{100\}-type facets, and a [111] orientation perpendicular to the substrate.
+The 3D displacement and strain evolution of two different facets present of the nanoparticles (\{100\} and \{111\}) will be compared to our results obtained on Pt (100) and (111) crystal surfaces by SXRD, to fully understand the impact of the Pt surface orientation on the catalyst selectivity.
+In-plane reciprocal space maps were first carried out to probe for the existence of surface reconstruction from the adsorbance of reactant products, as well as for the growth of potential surface and bulk oxides on the catalyst surface.
+Crystal truncation rods were measured to probe for surface relaxation effects, and to assert the average roughness of the catalyst surface.
+Additionnal $L$-scans were performed perpendicularly to newly discovered in-plane peaks to investigate the 3D structure of potential surface structures.
+Reflectivity curves were also carried out to obtain complementary informations about the formation of new layers on the catalyst surface.
 
-We have seen in sec. \ref{sec:SXRD} that truncated surfaces such as facets give rise to crystal truncation rods in the reciprocal space, the intensity of which is proportionnal to the size, roughness and strain of the related surface, as a function of the scattering vector.
-By having the incident beam covering all of the particles, the CTR signal in e.g. the [111] direction will be the sum of the contribution from the [111] facet of every nanoparticle on the sample (as well as their [$\bar{1}\bar{1}\bar{1}$] facets).
-Therefore, phenomena inducing structural change such as particle refaceting/reshaping at a given condition are expected to be visible by an evolution of the different CTR.
+% introduce xps
+Finally, core level photoemission spectroscopy provides different signatures for many moieties adsorbed on the surface during reactions and therefore the possibility to strengthen the links between structure, surface moieties and reaction products.
+In the intent of carrying out complementary NAP-XPS experiments to extend such concept to pure components of the standard catalyst, and to link internal stresses/surface-relaxations obtained from specific crystalline structures with the chemistry on its surfaces, the same Pt (111) and Pt (100) samples are used for both SXRD and NAP-XPS.
+For each combination of temperature and ammonia to oxygen ratio, the O1s, N1s, and Pt4f core levels were measured, that should carry information of the surface state, to establish a connection between selectivity, surface moieties, and internal stress.
+The Fermi edge is also measured after each core level to be able to find the zero kinetic energy.
 
-To have a more important scattered intensity, a slightly different sample was used from the sample used in BCDI, with the only difference being a surface homogenously covered with Pt particles.
+The oxidation of ammonia on single crystals was measured at \qty{450}{\degreeCelsius}, a temperature after the catalyst light-off.
+To make certain that any surface relaxation effects are related to the presence of both ammonia and oxygen in the reactor, the sample was first exposed to high oxygen atmopshere, at which the potential growth of surface oxides on the catalyst surface was monitored.
+The following introduction of ammonia in the reactor enables us to probe the impact of potential existent surface oxides on the catalyst selectivity during the reaction, as well as their stability during reaction condition.
+Two different partial pressures of oxygen have been used with the same partial pressure of ammonia to probe the effect of the ammonia to oxygen ratio on the catalyst structure, surface species, and selectivity.
+Finally, only ammonia was kept in the reactor to be able to decorellate the effect of the presence of ammonia from the simulatenous presence of ammonia and oxygen.
+
+The sample was characterized under argon before and after the oxidation cycle to make sure that the surface state exhibited by the catalyst is reversible.
+Due to important electron absorption in high atmospheres, the same atmospheres used for \textit{in-situ} and \textit{operando} SXRD cannot be reproduced for NAP-XPS, and the total pressure had to be lowered.
+The total atmosphere is not anymore kept constant to \qty{500}{\milli\bar} by the use of Argon as an inert carrier gas between each condition, while the reactant partial pressure is approximately \qty{10}{\percent} of the partial pressures used in BCDI and SXRD, with an equivalent (\dioxygen / \ammonia) ratio.
+The different conditions are resumed in tab. \ref{tab:ConditionsSXRD} and \ref{tab:ConditionsXPS}.
+
+The use of a residual gas analyser during \textit{in-situ} and \textit{operando} XPS and SXRD experiments allowed us to monitor the sample's catalytic activity.
+
+\begin{table}[!htb]
+\centering
+\resizebox{\textwidth}{!}{%
+    \begin{tabular}{@{}lll|l|lll|l@{}}
+    \toprule
+    \multicolumn{3}{l|}{Gas Flow (\unit{\ml\per\min})} & Total pressure (\unit{\milli\bar}) & \multicolumn{3}{l|}{Partial pressures (\unit{\milli\bar})} & Targeted information \\
+    \midrule
+    \midrule
+    \argon & \dioxygen & \ammonia &  & \argon & \dioxygen & \ammonia &  \\
+    \midrule
+    \midrule
+    50 & 0 & 0 & 500 & 500 & 0 & 0 & Catalyst state without reactants (unactive) \\
+    42 & 8 & 0 & 500 & 420 & 80 & 0 & Growth of surface oxides \\
+    41 & 8 & 1 & 500 & 410 & 80 & 10 & \multirow{2}{*}{\begin{tabular}[c]{@{}l@{}}Influence of (\ammonia/\dioxygen) ratio and impact \\ on/of potential surface oxides\end{tabular}} \\
+    48.5 & 0.5 & 1 & 500 & 485 & 5 & 10 &  \\
+    49 & 0 & 1 & 500 & 490 & 0 & 10 & Ammonia adsorption \\
+    50 & 0 & 0 & 500 & 500 & 0 & 0 & Returning to pristine state \\
+    49.5 & 0.5 & 0 & 500 & 495 & 5 & 0 & Growth of surface oxides \\
+    \bottomrule
+    \end{tabular}%
+}
+\caption{Different atmospheres used to probe the ammonia oxidation on Pt (100) and Pt (111) single crystals with SXRD.}
+\label{tab:ConditionsSXRD}
+\end{table}
+
+\begin{table}[!htb]
+\centering
+\resizebox{\textwidth}{!}{%
+    \begin{tabular}{@{}lll|l|lll|l@{}}
+    \toprule
+    \multicolumn{3}{l|}{Gas Flow (\unit{\ml\per\min})} & Total pressure (\unit{\milli\bar}) & \multicolumn{3}{l|}{Partial pressures (\unit{\milli\bar})} & Targeted information \\
+    \midrule
+    \midrule
+    \argon & \dioxygen & \ammonia &  & \argon & \dioxygen & \ammonia &  \\
+    \midrule
+    \midrule
+    50 & 0 & 0 & 1 & 1 & 0 & 0 & Catalyst state without reactants (unactive) \\
+    42 & 8 & 0 & 8.8 & 0 & 8.8 & 0 & Growth of surface oxides \\
+    41 & 8 & 1 & 9.9 & 0 & 8.8 & 1.1 & \multirow{2}{*}{\begin{tabular}[c]{@{}l@{}}Influence of (\ammonia/\dioxygen) ratio and impact \\ on/of potential surface oxides\end{tabular}} \\
+    48.5 & 0.5 & 1 & 1.65 & 0 & 0.55 & 1.1 &  \\
+    49 & 0 & 1 & 1.1 & 0 & 0 & 1.1 & Ammonia adsorption \\
+    50 & 0 & 0 & 1 & 1 & 0 & 0 & Return to pristine state \\
+    49.5 & 0.5 & 0 & 0.55 & 0 & 0.55 & 0 & Growth of surface oxides \\
+    \bottomrule
+    \end{tabular}%
+}
+\caption{Different atmospheres used to probe the ammonia oxidation on Pt (100) and Pt (111) single crystals with NAP-XPS.}
+\label{tab:ConditionsXPS}
+\end{table}
 
 \subsection{Experimental setup for SXRD experiments in the horizontal geometry}\label{sec:SXRDSetupH}
 
-The diffractometer was used in a horizontal geometry (fig. \ref{fig:Diffractometer}), so that is it possible to clean the sample surface by sputtering and annealing.
-There is no need for high incident angles when performing surface x-ray diffraction, the incident beam is set at a grazing angle to cover the entire sample surface.
-No cleaning process was applied to this sample that has the same history as the sample with isolated nanoparticles used for BCDI experiments, \textit{i.e.} annealing at \qty{1100}{\degreeCelsius} for \qty{30}{\minute} before cooling to room temperature.
-The temperature in the MED end-station is of about \qty{25}{\degreeCelsius}.
+The surface x-ray diffraction experiment were performed at the SixS beamline at the Synchrotron SOLEIL detailed in sec. \ref{sec:SIXS}.
+The diffractometer was used in a horizontal geometry (fig. \ref{fig:Diffractometer}), accomodating the large XCAT reactor that enables the possibility to clean the sample surface by sputtering (bombardment of Argon ions) and annealing directly in the reactor chamber, without having to expose the sample to air prior to the experiment.
+Two successive sputtering and annealing cycles have been carried out before the start of the SXRD experiment.
+To do so, the reactor cell was brought to low pressure by respectively closing and opening the entrance and exit valves, while pumping the reactor volume.
+The volume inside the XCAT reactor was increased by \textit{opening} the chamber (fig. \ref{fig:SampleSXRD}) while the height of the sample was changed so that the ion gun situated on the side of the XCAT reactor is aligned with the sample surface.
+The sputtering current resulting from the impact of ions on the sample surface was measured by a circuit directly connected to the sample.
+The sample height was tuned to maximize the sputtering current and surface cleaning, the Pt surface was then cleaned by sputtering for \qty{5}{\minute} at room temperature.
+The efficiency of the sputtering could be observed directly by a quick increase of the reactor pressure in the first minutes linked to the removal of surface impurities, followed by a progressive decrease of the reactor pressure from pumping.
+The sample was then heated up to \qty{800}{\degreeCelsius} for \qty{30}{\minute} for annealing, the efficiency of which could again be directly visualized by the increase of the reactor pressure.
+The same procedure was applied to both Pt (111) and Pt (100) surfaces.
 
-The incident beam was fixed to \ang{0.3} with the angle $\mu$, so that the beam recovers the entire sample surface.
-In-plane measurements were perfomed by rotating the in-plane sample angle $\omega$ together with the in-plane detector angle $\delta$.
-Out-of-plane measurements were performed by rotating the in-plane sample angle $\omega$ together with the in-plane and out-of-plane detector angles $\delta$ and $\gamma$, the incoming angle $\mu$ must stay at a low value to keep the grazing incidence of the beam as detailed in sec. \ref{sec:DataCollectionSXRD}.
+The experiment was performed at an energy of \qty{15}{\keV}.
+The alignement of the beam was performed with the direct beam using the same procedure detailed previously in sec. \ref{sec:SXRDSetupV}.
+In the horizontal configuration, the incident angle is $\beta$, set to grazing incidence so that the beam recovers the entire sample surface.
+The beam footprint is larger than the sample which presents a round shape (diameter \qty{\approx 8}{\mm} - fig. \ref{fig:SampleSXRD}), which allows us to consider that the beam is always covering the entire sample surface, thereby ignoring illumination effects, \textit{i.e} the loss of intensity during measurement due to a loss of alignment from the rotation of the sample plane.
+Crystal truncation rods were performed in the out-of-plane direction, perpendicular to the sample plane, \textit{i.e.} in the vertical plane ($\vec{x}, \vec{z}$) to maximize the intensity of the scattered field and to ignore polarisation effects in the evolution of the CTR intensity (fig. \ref{fig:polarization_effect}).
+The sample plane was realigned at the beginning of each condition in the direct beam, the orientation matrix $U$ of the crystal \parencite{Schleputz2011} was also recomputed by measuring two different Bragg peaks.
 
-The alignement of the beam was performed with the direct beam (all angles at \ang{0})
-% to ensure that the sample surface is parallel to the direct beam at $\mu=0$ when $\omega = \ang{0}$ and when $\omega = \ang{90}$.
-First, to place the sample in the beam, its position was gradually increased in the direction perpendicular to the sample plane while recording the intensity of the direct beam.
-The sample was then moved to the position at which the intensity of the direct beam was equal to half of its intensity without the sample in the beam path, so that when incresing the incidence angle to \ang{0.3}, the beam covers the entire sample surface.
-Secondly, any possible tilt of the sample surface was corrected by recording the intensity of the \textit{reflected} beam as a function of the $u$ (when $\omega=\ang{0}$) or $v$ (when $\omega=\ang{90}$) angles (fig. \ref{fig:Diffractometer}).
-
-This experiment proved to be difficult to realise experimentally.
-The graphite layer used to heat the sample is covered by a Boron Nitride solid surface with 4 holes (fig. \ref{fig:SampleHolder}), two holes are used with small screws to fix the sample on top of the heater, while the two others are used to fix the heater to the sample holder.
-Despite an extra layer of Boron Nitride that was applied around these screws and holes, the high temperature and highly oxidating atmosphere managed twice to corrode the conducting screws which resulted in a contact loss with the heater, thus a change of heater and realignment of the sample surface.
-However, most of the experimental plan was still carried out, lacking only in-plane measurements at \qty{600}{\degreeCelsius} under \qty{8}{\ml\per\min} of oxygen and \qty{1}{\ml\per\min} of ammonia (tab. \ref{tab:Conditions}), due to a lack of experimental time.
-
-
-\subsection{Crystal structures}
-
-Platinum crystallizes in a face-centered cubic structure with a lattice parameter $|\vec{a}|$ equal to \qty{3.9254}{\angstrom} at room temperature.
-The structure of the [001] and [111] planes differ greatly as shown in fig. \ref{fig:Cubic100Hex111}.
-The shortest distance between the atoms on the [001] and [111] surfaces is $a/\sqrt{2} = \qty{2.78}{\angstrom}$, which is the magnitude of the \textit{in-plane} vectors used to describe the two surfaces.
-However, the atoms on the [001] plane follow a cubic structure, whereas the atoms on the [111] plane follow a hexagonal structure, therefore the angle $\gamma$ between the two in-plane vectors is equal to \ang{90} for the [100] surface and to \ang{120} for the [111] surface.
-The \textit{out-of-plane} vector, which is in both case perpendicular to the two surfaces, changes magnitude since there are 3 [111] planes contained in a classic unit cell (fig. \ref{fig:Cubic100Hex111}).
-The different structures are resumed in tab. \ref{tab:Structures}.
+% In-plane measurements were perfomed by rotating the in-plane sample angle $\omega$ together with the in-plane detector angle $\gamma$.
+% Out-of-plane measurements were performed by rotating the in-plane sample angle $\omega$ together with the in-plane and out-of-plane detector angles respectively $\gamma$ and $\delta$, the incoming angle $\beta$ must stay at a low value to keep the grazing incidence of the beam as detailed in sec. \ref{sec:DataCollectionSXRD}.
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhD/Figures/introduction/100.pdf}
-    \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhD/Figures/introduction/111.pdf}
+    \includegraphics[width=0.33\textwidth]{/home/david/Documents/PhD/Figures/sample/sxrd_sample.png}
+    \includegraphics[width=0.33\textwidth]{/home/david/Documents/PhD/Figures/xps_data/B07Setup.png}
     \caption{
-        Face-centered cubic unit cell of Pt with two [001] crystallographic planes drawn in green at z=0 and z=1 (left).
-        The $\vec{a}$, $\vec{b}$, and $\vec{c}$ vectors are used classically to decribe the FCC cubic structure, the $\vec{a}_s$ and $\vec{b}_s$ in-plane vectors separated by \ang{90} and of magnitude \qty{2.78}{\angstrom} can also be used specifically to describe the structure of the [001] planes.
-        Face-centered cubic unit cell of Pt with $[111]$ crystallographic plane drawn in green (right).
-        The arrangement of the Pt atoms on the $[111]$ crystal planes is hexagonal, which leads to a new definition of the surface unit cell with the $\vec{a}$ and $\vec{b}$ in-plane vectors separated by \ang{120} of magnitude \qty{2.78}{\angstrom}, and $\vec{c}$ perpendicular to the $[111]$ plane of magnitude \qty{6.81}{\angstrom}.
-        There are three $[111]$ planes spanned by the magnitude of $\vec{c}$ (blue, red and green on the figure).
+        Round single crystal set on sample holder (left) the top of the crystal is [111] oriented, the surface area of the single crystal is \qty{\approx 5e7}{\um^2}, the [100] oriented sample has the same shape.
+        Large XCAT reactor opened for sputtering for (middle).
+        Detailed drawing of the XPS chamber at the B07 beamline at the Diamond Synchrotron (right), taken from \parencite{Held2020}.
+        \textcolor{Important}{Add image of XCAT opened and closed}
     }
-    \label{fig:Cubic100Hex111}
+    \label{fig:SampleSXRD}
 \end{figure}
 
-\begin{table}[]
-\centering
-% \resizebox{\textwidth}{!}{%
-\begin{tabular}{@{}llllll@{}}
-\toprule
-     & $\alpha$ & $\beta$ & $\gamma$ & $|\vec{a}|$ & $|\vec{c}|$ \\
-\midrule
-FCC & \ang{90} & \ang{90} & \ang{90} & \qty{3.9242}{\angstrom} & \qty{3.9242}{\angstrom} \\
-$[100]$ & \ang{90} & \ang{90} & \ang{90} & \qty{2.78}{\angstrom} & \qty{3.9242}{\angstrom} \\
-$[111]$ & \ang{90} & \ang{90} & \ang{120} & \qty{2.78}{\angstrom} & \qty{6.81}{\angstrom} \\
-\bottomrule
-\end{tabular}%
-% }
-\caption{
-    Different structures used in the frame of this thesis.
-    Surface unit cells are used to simplify the study of surface relaxations
-    }
-\label{tab:Structures}
-\end{table}
+\subsection{Experimental setup for X-ray photoelectron spectroscopy} \label{sec:XPS111}
 
-\subsection{X-ray photoelectron spectroscopy measurements} \label{sec:XPS111}
+The NAP-XPS experiment was performed at the B07 end station at the Diamond Light Source \parencite{Held2020}.
+The electron analyser axis is at an angle of \ang{60.1} with respect to the beam and tilted at \ang{30} with respect to the horizontal plane, \textit{i.e.} close to the magic angle with respect to the polarization vector.
+The cone aperture of the analyser has a diameter equal to \qty{0.3}{\mm}, which is slightly larger than the footprint of the beam on the sample at normal emission equal to \qty{0.2}{\mm}.
+Four different pumping stages protect the vacuum in the UHV section of the analyser from the endstation, that can reach a working pressure of \qty{100}{\milli\bar}.
+The ﬁrst two differential pumping stages each contain a quadrupole mass spectrometer used for the analysis of the sample environment, depending on the total pressure in the reactor cell.
+The increased attenuation through high pressures is compensated by limiting the path length to sub-millimetre range for electrons that travel through the atmosphere from the sample surface to the analyzer, the typical working distance between cone aperture and sample is between \qty{0.2}{\mm} and \qty{0.3}{\mm}.
 
-On the Pt-Rh alloy an important body of work has been
-already carried out, revealing two oxide structures present in the temperature and
-pressure ranges we intend to study [6].
-It is our goal to retrieve the surface moieties on PtRh nanoparticles as function of the reactive atmosphere’s composition.
-The particles are lithography patterned on the sapphire surface, allowing to retrieve each particle position across different setups.
-Through Bragg coherent diffraction imaging (BCDI) particles will be studied under reactive condition, then we plan to measure those very same particles at B07. The BCDI measurements give the possibility to follow the particle internal stresses as a function of the gas composition and the behavior of each facet at the same time as difference to the single crystal approach that can probe only one facet at the time.
-The B07 setup is sensitive to the surface moieties on the particle across the different for each gas condition.
-The colored insert in In Figure 1 is one particle from lithographed sample in operando condition: SixS beamline data (SOLEIL synchrotron).
-The particles are sub-micron, like the grains in the metallic gauzes industrially used for this reaction. We plan to expose the particles to five ammonia to oxygen ratios, spanning from oxygen rich to oxygen poor conditions.
-
-The goal of the experiment is to provide new insights on the PtRh catalysts during the NH3 oxidation.
-Core level photoemission spectroscopy provides different signatures for many moieties adsorbed on the surface during reactions and therefore the possibilityto strengthen the links between structure, surface moieties and reaction products.
-Our recently published results from both surface x-ray diffraction experiments (SXRD) and NAP-XPS [7] link surface relaxation to changes in surface moieties.
-The intent of the experiment is to extent such concept to a particle and link internal stresses/surface-relaxations obtained from BCDI with the chemistry on its surfaces.
-
-The B07 NAP-PXS end station can control the xyz positioning of the sample with a precision in the order of 10um, allowing to position the 50um beam[5] in the center of
-any of the 100x100um squares of the sample.
-At the center of each square is located one isolated particle.
-This approach allows to study single particle behavior as function of the NAP-XPS atmosphere but also to retrieve the very same particle studied with BCDI on the SixS beamline.
-As for the experiment in Ref. [7], we intent to apply the same temperatures and pressures for BCDI and NAP-XPS.
-Temperatures and gas pressures will range between 450, and 650 K and from 0.5 to few tens of mBar respectively.
-For each combination of temperature and ammonia to oxygen ratio, we will measure: O1s, N1s, Pt4d, Pt4f and Rh3d core levels that should carry information of the surface state.
-Essential for the experiment is also to collect the gas phase composition for each condition to compare particles reactivity.
-
-We expect to establish a connection between selectivity and surface moieties but also between surface moieties and particle internal stress. We also hope to be able to detect variations in the rhodium surface concentration related to the imposed gas conditions
-
-B07 and its recent ambient pressure setup [5], that has now benefit from years of experience, push the high-pressure limits well into the mBar regime.
-This new limit and the wide range of achievable temperatures/energies/pressures make it a unique tool for modern surface science and catalysis.
-Timewise we expect to be able to characterize the nanoparticle(s) of interest as soon as they entered the analysis chamber from atmosphere and take reference scans after few oxidation/reduction cycles.
-Reference scans will be taken on “as inserted” samples and on freshly oxidized/reduced particles with and without adsorbates reactants/products.
-Similar scan will also be collected for the bare sapphire substrate. It is estimated that the first 2/3 days will suffice to collect references.
-The operando experiments will be performed during the remaining 3/4 days of the beamtime.
-
-\subsubsection{Experimental setup}
-
-Since the XPS measurements were performed at different total pressures, the raw data had first to be reduced in order to analyse the different spectra in a systematic way.
-The adopted workflow for the analysis of XPS data is to first align the recorded spectra on the Fermi edge that corresponds to the kinetic energy of the first electron that escapes the sample.
-By doing so, one can be confident that any shift in the peak positions is due to chemical changes, such as the oxidation state of the sample, and not to charging effects of the sample (cite).
-
-Secondly, to be able to quantify and compare the evolution of the peak intensity, one must normalize the intensity of the detected electron beam since the electron mean free path depends on the pressure in the reaction chamber \parencite{Willmott}.
-The range of kinetic energy just before the absorption edge of Pt 4f was chosen since it had the best signal to noise ratio and does not depend on any experimental parameter besides the pressure.
-
-Finally, for the peaks that showed a good signal to noise ratio, the fitting of the peak shape was realised thanks to the \textit{lmfit} \parencite{Newville2016} package by the means of the Doniach-equation which is the best approximation of the asymmetric peak shape resulting from the convolution of the analyser function and the photoelectron process in metals \parencite{Doniach_1970}.
-
-\subsection{Experimental plan}\label{sec:SXRDPlan}
-
-The oxidation of ammonia was measured at \qty{450}{\degreeCelsius} with less conditions than in sec. \ref{sec:BCDIAmmoniaOxidation} due to long measuring time necessary to collect a large volume of the reciprocal space.
-To make certain that any possible surface relaxation effect was related to the presence of both ammonia and oxygen in the reactor, the sample was first exposed to \qty{80}{\milli\bar} of oxygen (i), followed by the introduction of \qty{10}{\milli\bar} ammonia (ii).
-The pressure of oxygen in the reactor was then reduced to \qty{5}{\milli\bar} (ii), and to \qty{0}{\milli\bar} of oxygen (iv), keeping only \qty{10}{\milli\bar} of ammonia in the reactor (v).
-The sample was characterized under \qty{500}{\milli\bar} of argon before and after the oxidation cycle, the total pressure in the reactor was kept to \qty{500}{\milli\bar} by adjusting the amount of argon.
+The energy or the incident photons was chosen to optimized the photoelectron signal, as a compromise between electron transmission (which increases as a function of the photon energy) and excitation cross-sections (which decreases as a function of the photon energy), depending on the gas present in the reactor.
+Guidelines on how to choose the best instrumental settings are detailed in \parencite{Held2020}.
